one reference to new Byte(n)